# ReliantAI

./: .claudeignore  .env.example  .env.production.example  .env.staging.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  App.tsx  BLACKBOX.md  Bug-Report.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  DESIGN.md  Dockerfile.agents  GEMINI.md  IMPLEMENTATION_CHECKLIST.md  INFLUENCE_MATRIX_IMPLEMENTATION.md  INFRASTRUCTURE_ADDITIONS.md  LICENSE  MASTER_AUDIT_CONSOLIDATED.md  MISSING_ITEMS.md  PLATFORM_GUIDE.md  PRODUCTION_CHECKLIST.md  PROGRESS_TRACKER.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RELIANT_OS_LAUNCH.md  REMEDIATION_PLAN.md  ReliantAI Mobile App (1).html  SCAFFOLD_PLAN.md  SEO-ACTION-PLAN.md  USER_MANUAL.md  agents-cli.py  (+31 more)
.claude/: settings.json
.kilocode/: # PROMPT.md  orchestrator_enhancements.py  system-prompt-review
.serena/: project.yml
Acropolis/: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY_CHANGELOG.md  build.sh  deny.toml  requirements.txt  security_demo.sh
Acropolis/adaptive_expert_platform/: Cargo.toml  config.toml
Acropolis/adaptive_expert_platform/src/: agent.rs  auth.rs  batch.rs  cache.rs  cli.rs  ffi_julia.rs  ffi_zig.rs  lib.rs  lifecycle.rs  main.rs  mesh.rs  metrics.rs  middleware.rs  monitoring.rs  orchestrator.rs  plugin.rs  server.rs  settings.rs  telemetry.rs  wasm_plugin.rs  websocket.rs
Acropolis/adaptive_expert_platform/src/memory/: mod.rs  redis_store.rs  vector_store.rs
Acropolis/adaptive_expert_platform/tests/: basic_agent_test.rs
Acropolis/gui/: Cargo.toml
Acropolis/gui/src-tauri/: src-main.rs  tauri.conf.json
Acropolis/plugins/dqn_plugin/: Cargo.toml
Acropolis/plugins/dqn_plugin/src/: lib.rs
Acropolis/plugins/julia_plugin/: Cargo.toml
Acropolis/plugins/julia_plugin/src/: lib.rs
Acropolis/plugins/uppercase_plugin/: Cargo.toml
Acropolis/plugins/uppercase_plugin/src/: lib.rs
B-A-P/: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
B-A-P/helm/: Chart.yaml  values.yaml
B-A-P/helm/templates/: deployment.yaml  ingress.yaml  service.yaml
B-A-P/migrations/: env.py
B-A-P/migrations/versions/: 20260306_0001_create_datasets_table.py  20260306_0002_create_etl_tables.py
B-A-P/scripts/: deploy.sh  setup.sh
B-A-P/src/: main.py
B-A-P/src/ai/: __init__.py  forecast_engine.py  gpt_client.py  insights_generator.py  llm_client.py
B-A-P/src/api/: __init__.py  auth_integration.py  exception_handlers.py
B-A-P/src/api/middleware/: auth.py  rate_limit.py  security.py
B-A-P/src/api/routes/: __init__.py  analytics.py  data.py  pipeline.py
B-A-P/src/config/: settings.py
B-A-P/src/core/: __init__.py  cache.py  database.py  datasets.py  event_bus.py  security.py
B-A-P/src/etl/: __init__.py  pipeline.py
B-A-P/src/models/: analytics_models.py  data_models.py
B-A-P/src/tasks/: __init__.py  celery_app.py  pipeline_tasks.py
B-A-P/src/utils/: __init__.py  logger.py  metrics.py  performance.py
B-A-P/tests/: conftest.py  test_api.py  test_auth_integration.py  test_concurrency.py  test_core.py  test_coverage_extensions.py  test_etl.py  test_event_bus_integration.py  test_llm_client.py  test_performance.py
BackupIQ/: AGENTS.md  Dockerfile  Makefile  README.md  auth_integration.py  index.html  requirements-dev.txt  requirements.txt  script.js  setup.py  style.css
Citadel/: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  INSTRUCTION_MANUAL.md  Makefile  README.md  compose.yaml  desktop_gui.py  freeze_latest_requirements.py  run_end_to_end.sh  setup.sh
ClearDesk/: .gitignore  AGENTS.md  CLEARDESK_SYSTEM_BRIEF.md  Dockerfile  LICENSE.txt  README.md  index.html  package-lock.json  package.json  vite.config.ts
ComplianceOne/: .env.example  Dockerfile  main.py  requirements.txt
CyberArchitect/: AGENTS.md  Dockerfile  README.md  auth_middleware.js  ultimate-website-replicator.js
DocuMancer/: .eslintrc.json  .gitignore  AGENTS.md  Dockerfile  README.md  auth_middleware.js  electron-builder.yml  package-lock.json  package.json
FinOps360/: .env.example  Dockerfile  main.py  requirements.txt
Gen-H/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  automation-audit.jsx  index.html  package-lock.json  package.json  start-all.sh  stop-all.sh  tailwind.config.js  vercel.json  vite.config.ts
GrowthEngine/: Dockerfile  main.py  requirements.txt
Money/: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  billing.py  circuit_breaker.py  circuit_breaker_integration.py  config.py  database.py  event_subscriber.py  hvac_dispatch_crew.py  main.py  metrics.py  openclaw_integration.py  rate_limiter.py  render.yaml  requirements.txt  response_templates.py  retry_queue.py  schema_validation.py  security_utils.py  setup_kubuntu.sh  state_machine.py  triage.py  warp.Dockerfile
ReliantAI Design System/: HANDOFF.html  HANDOFF.md  README.md  SKILL.md  colors_and_type.css
actuator/: Dockerfile  main.py
apex/: .env.example  .gitignore  AGENTS.md  README.md
citadel_ultimate_a_plus/: .env.template  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  auth_integration.py  census_ranker.py  crawler.py  dashboard_app.py  docker-compose.yml  inference.py  lead_queue.py  orchestrator.py  requirements.txt  sync_state.sh
claudedocs/: ADVERSARIAL_AUDIT_REPORT.md
console/: Shell.jsx  UI.jsx  tokens.css
dashboard/: index.html
docs/: API_REFERENCE.md  ARCHITECTURE_MAP.md  CLIENT_SITES_MANUAL.md  IMPROVEMENT_REPORT.md  MICROSERVICE_MANUALS.md  OPERATIONAL_RUNBOOK.md  QUICK_REFERENCE.md  executable_nexus_spec.py  nexus_spec.md
init-scripts/: 01-init-databases.sql
integration/: .env.example  .gitignore  .gitkeep  AGENTS.md  Dockerfile  HOSTILE_AUDIT_PHASE1.md  README.md  __init__.py  a2a_bridge.py  complianceone_client.py  cross_system_orchestrator.py  docker-compose.ha.yml  (+7 more)
(+1621 files in other folders)
