[package]
name = "adaptive_expert_platform"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "adaptive_expert_platform"
path = "src/lib.rs"

[[bin]]
name = "acropolis-cli"
path = "src/main.rs"

[dependencies]
# Core async runtime and utilities
tokio = { version = "1.37", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "process",
  "sync",
  "signal",
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }

# Security dependencies
sha2 = "0.10"
regex = "1.10"
blake3 = "1.5"
jsonwebtoken = "9.2"
argon2 = "0.5"
governor = "0.6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
num_cpus = "1.16"
rand = "0.8"

# Configuration and settings
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
rpassword = "7.3"

# File system operations and monitoring
notify = "6.1"
tempfile = "3.8"

# Plugin and FFI support
libloading = "0.8"
once_cell = "1.19"

# Memory management and async utilities
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Serialization
bincode = "1.3"
sled = "0.34.7"          # removed the nonexistent "serde" feature

# Julia FFI (optional) — bumped to pick up jlrs-macros v0.4.0 which fixes the SELECTED_MINOR_VERSION bug
jlrs = { version = "0.21.1", optional = true, features = ["julia-1-10"] }

# Optional engines / back-ends
llama_cpp = { version = "0.3", optional = true }
wasmtime = { version = "35.0", optional = true, features = ["component-model"] }
redis = { version = "0.25", optional = true }
bb8 = { version = "0.8", optional = true }
bb8-redis = { version = "0.14", optional = true }

# Advanced features
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"
lru = "0.16"
bloom = "0.3"
ahash = "0.8"
fnv = "1.0"

# Vector search and embeddings
candle-core = { version = "0.7", optional = true }
candle-nn = { version = "0.7", optional = true }
hnsw_rs = { version = "0.3", optional = true }
ndarray = { version = "0.16", optional = true }
faiss = { version = "0.12", optional = true }

# Monitoring and metrics
prometheus = { version = "0.14", optional = true, default-features = false }
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }

# WebSocket & cookie support
axum-extra = { version = "0.9.6", features = ["cookie"] }

tower-http = { version = "0.5", features = ["cors", "trace", "limit", "compression-br", "fs"] }

# Configuration enhancements
etcd-rs = { version = "1.0", optional = true }
consul = { version = "0.4", optional = true }

[dev-dependencies]
# Testing infrastructure
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-test = "0.2"
# futures already in [dependencies], no need to repeat

[features]
# Default build includes basic features (removed problematic dependencies for now)
default = []

# Each optional dependency must appear inside some feature list
with-llama = ["dep:llama_cpp"]
with-wasm = ["dep:wasmtime"]
with-redis = ["dep:redis", "dep:bb8", "dep:bb8-redis"]
with-julia = ["dep:jlrs"]
with-zig = []
with-observability = [
  "dep:opentelemetry",
  "dep:tracing-opentelemetry",
  "dep:opentelemetry-otlp",
]
with-vector-search = ["dep:hnsw_rs", "dep:ndarray", "dep:candle-core", "dep:candle-nn"]
with-faiss = ["dep:faiss"]
with-metrics = ["dep:prometheus", "dep:metrics", "dep:metrics-exporter-prometheus"]
with-distributed = ["dep:etcd-rs", "dep:consul"]
