[package]
name = "adaptive_expert_gui"
version = "0.1.0"
description = "A Tauri GUI for the Adaptive Expert Platform"
authors = ["Adaptive Expert Platform Team"]
license = "MIT"
repository = "https://github.com/adaptive-expert-platform/core"
edition = "2021"

[[bin]]
name = "adaptive_expert_gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.36", features = ["full"] }

# This is the crucial line that links your backend library
adaptive_expert_platform = { path = "../adaptive_expert_platform" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
